--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bigtop-viz",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sites.ualberta.ca/~nbtaylor/bigtop/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
